<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ui.fragment.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_decor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:tint="#0DFFFFFF"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_decor2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:tint="#0DFFFFFF"/>

        <TextView
            android:id="@+id/header_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/header_profile"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_profile_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:shapeAppearanceOverlay="@style/circle"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="@style/rounded_10"
            app:layout_constraintBottom_toTopOf="@id/profile_custom_background"
            tools:src="@tools:sample/avatars"/>
        
        <TextView
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/iv_profile_photo"
            tools:text="Username"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_margin="8dp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@id/tv_username"
            tools:text="username@gmail.com"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.68"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profile_custom_background"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            app:shapeAppearance="@style/semi_circle_top_6" />

        <Button
            android:id="@+id/btn_logout"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/btn_logout"
            android:textColor="@color/danger"
            app:icon="@drawable/ic_logout"
            app:iconGravity="textStart"
            app:iconTint="@color/danger"
            app:layout_constraintBottom_toBottomOf="parent"
            app:strokeColor="@color/danger" />

        <Button
            android:id="@+id/btn_edit_profile"
            style="@style/Widget.Material3.Button.TextButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:text="@string/btn_edit_profile"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:iconPadding="10dp"
            app:icon="@drawable/ic_edit_profile"
            app:iconGravity="textStart"
            app:iconTint="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/profile_custom_background" />

        <Button
            style="@style/Widget.Material3.Button.TextButton.Icon"
            android:id="@+id/btn_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:gravity="center_vertical"
            android:text="@string/btn_change_password"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:iconPadding="10dp"
            app:icon="@drawable/ic_password"
            app:iconGravity="textStart"
            app:iconTint="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_edit_profile" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>